Add swag api doc
