# api/server/router/user/user_router.go
@@ -27,6 +27,20 @@ type IdMeta struct {
 	UserId int64 `uri:"userId" binding:"required"`
 }
 
+
+// CreateUser godoc
+//
+//  @Summary      Create a user
+//  @Description  Create by a json user
+//  @Tags         Users
+//  @Accept       json
+//  @Produce      json
+//  @Param        user  body      types.User  true  "Create user"
+//  @Success      200   {object}  httputils.Response
+//  @Failure      400   {object}  httputils.Response
+//  @Failure      404   {object}  httputils.Response
+//  @Failure      500   {object}  httputils.Response
+//  @Router       /pixiu/users/ [post]
 func (u *userRouter) createUser(c *gin.Context) {
 	r := httputils.NewResponse()
 
@@ -46,6 +60,20 @@ func (u *userRouter) createUser(c *gin.Context) {
 	httputils.SetSuccess(c, r)
 }
 
+// UpdateUser godoc
+//
+//  @Summary      Update an user
+//  @Description  Update by json user
+//  @Tags         Users
+//  @Accept       json
+//  @Produce      json
+//  @Param        userId  path      int         true  "User ID"
+//  @Param        user    body      types.User  true  "Update user"
+//  @Success      200     {object}  httputils.Response
+//  @Failure      400     {object}  httputils.Response
+//  @Failure      404     {object}  httputils.Response
+//  @Failure      500     {object}  httputils.Response
+//  @Router       /pixiu/users/{userId} [put]
 func (u *userRouter) updateUser(c *gin.Context) {
 	r := httputils.NewResponse()
 
@@ -71,6 +99,19 @@ func (u *userRouter) updateUser(c *gin.Context) {
 	httputils.SetSuccess(c, r)
 }
 
+// DeleteUser godoc
+//
+//  @Summary      Delete user by userId
+//  @Description  Delete by userID
+//  @Tags         Users
+//  @Accept       json
+//  @Produce      json
+//  @Param        userId  path      int  true  "User ID"
+//  @Success      200     {object}  httputils.Response
+//  @Failure      400     {object}  httputils.Response
+//  @Failure      404     {object}  httputils.Response
+//  @Failure      500     {object}  httputils.Response
+//  @Router       /pixiu/users/{userId} [delete]
 func (u *userRouter) deleteUser(c *gin.Context) {
 	r := httputils.NewResponse()
 
@@ -90,6 +131,19 @@ func (u *userRouter) deleteUser(c *gin.Context) {
 	httputils.SetSuccess(c, r)
 }
 
+// Getuser godoc
+//
+//  @Summary      Get user by userId
+//  @Description  Get by user ID
+//  @Tags         Users
+//  @Accept       json
+//  @Produce      json
+//  @Param        userId  path      int  true  "User ID"
+//  @Success      200     {object}  httputils.Response
+//  @Failure      400     {object}  httputils.Response
+//  @Failure      404     {object}  httputils.Response
+//  @Failure      500     {object}  httputils.Response
+//  @Router       /pixiu/users/{userId} [get]
 func (u *userRouter) getUser(c *gin.Context) {
 	r := httputils.NewResponse()
 
@@ -109,6 +163,18 @@ func (u *userRouter) getUser(c *gin.Context) {
 	httputils.SetSuccess(c, r)
 }
 
+// Listusers godoc
+//
+//  @Summary      List users
+//  @Description  List users
+//  @Tags         Users
+//  @Accept       json
+//  @Produce      json
+//  @Success      200  {array}   httputils.Response
+//  @Failure      400  {object}  httputils.Response
+//  @Failure      404  {object}  httputils.Response
+//  @Failure      500  {object}  httputils.Response
+//  @Router       /pixiu/users [get]
 func (u *userRouter) listUsers(c *gin.Context) {
 	r := httputils.NewResponse()
 
@@ -121,6 +187,19 @@ func (u *userRouter) listUsers(c *gin.Context) {
 	httputils.SetSuccess(c, r)
 }
 
+// Login godoc
+//
+//  @Summary      User login 
+//  @Description  Login by a json user
+//  @Tags         Users
+//  @Accept       json
+//  @Produce      json
+//  @Param        user  body      types.User  true  "User login"
+//  @Success      200   {object}  httputils.Response
+//  @Failure      400   {object}  httputils.Response
+//  @Failure      404   {object}  httputils.Response
+//  @Failure      500   {object}  httputils.Response
+//  @Router       /pixiu/users/login [post]
 func (u *userRouter) login(c *gin.Context) {
 	r := httputils.NewResponse()
 
